Spelling (#222)
* spelling: assignment

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

* spelling: catch

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

* spelling: class

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

* spelling: compatibility

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

* spelling: illegal

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

* spelling: jakarta

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

* spelling: threshold

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>

---------

Signed-off-by: Josh Soref <2119212+jsoref@users.noreply.github.com>